# HPC101

./: .gitignore  README.md  mkdocs.yml  mkslides.yml  requirements.txt
.github/workflows/: ci.yml
beamer/: Makefile  day11.tex  day3.tex  day8_am.tex  day8_pm.md  day8_pm.tex
beamer/day11/sections/: CPU_Profile.tex  GPU_Profile.tex  Intro.tex
beamer/day3/sections/: introduction.tex  os.tex  process.tex  syscall.tex  thread.tex  vm.tex
beamer/day8_am/sections/mpi/: Collective.tex  Intro.tex  P2P.tex  advanced.tex  example.tex
beamer/day8_am/sections/openmp/: For.tex  Hazard.tex  Intro.tex  advanced.tex
beamer/day8_pm/sections/: 1_introduction.tex  2_cpp_intro.tex  3_thread.tex  4_mutex.tex  5_condition_variable.tex  6_parallel_algorithm.tex  7_summary.tex
beamer/zjusct-beamer/: zjusctbeamer.cls
beamer/zjusct-beamer/assets/svg-inkscape/: zjusct_svg-tex.pdf_tex
docs/: CNAME  index.md
docs/assets/: zjusct-hpc101-text.ai  zjusct-hpc101.ai
docs/guide/: env.md  index.md  job.md  oj.md  overview.md
docs/index.assets/statistics/: submission.py
docs/javascripts/v86/: libv86.js  v86.wasm
docs/lab/: index.md
docs/lab/Final-Project/: index.md
docs/lab/Lab0-LinuxCrashCourse/: index.md
docs/lab/Lab1-MiniCluster/: index.md
docs/lab/Lab2-Vectorization/: index.md
docs/lab/Lab2-Vectors/: index.md
docs/lab/Lab2.5-RISC-V/: index.md
docs/lab/Lab2.5-Vectors-Bonus/: index.md
docs/lab/Lab2.5-Vectors-Bonus/code/: base.cpp  modify.py  multi.cpp
docs/lab/Lab3-Cuda/: index.md
docs/lab/Lab3-Cuda/code/: .gitignore  CMakeLists.txt  job.sh
docs/lab/Lab3-Cuda/code/include/: check.cuh  common.cuh  gemm.cuh
docs/lab/Lab3-Cuda/code/src/: bench.cu  cublas.cu  hgemm_kernel.cu  main.cu  sgemm_kernel.cu
docs/lab/Lab3-CudaConv/: index.md
docs/lab/Lab4-Solver-Challenge/: index.md
docs/lab/Lab4-Solver-Challenge/code/: README.md  compile.sh  run.sh
docs/lab/Lab4-Solver-Challenge/code/src/: main.cpp
docs/lab/Lab4-Solver-Challenge/code/src/bicgstab/: solver.c
docs/lab/Lab5-DL/: index.md
docs/lab/Lab5-DL/code/: process.py  requirements.txt
docs/lab/Lab5-TinyLLM/: index.md
docs/lab/Project-Pivot/: index.md
docs/slides/: index.md
docs/stylesheets/: fonts.css  theme.css
slides/: lec8-cpp-en.md  lec8-cpp-zh.md  test.md
slides/assets/templates/: index.jinja
slides/example/: c0.md  c1.md  c2.md
slides/zjusct-style/: index.css  slides-black.css  slides-white.css
src/lab2/vector/: main.cpp
src/lab2p5/: CMakeLists.txt  main.cpp
src/lab2p5/include/: gemm.h  utils.h
src/lab2p5/scripts/: compile.sh  run.sh
src/lab2p5/src/: naive.cpp  optimized.cpp  utils.cpp
src/lab3/: CMakeLists.txt  README.md  conv_result.out  report_memory_analysis.ncu-rep  report_optimized.ncu-rep
src/lab3/include/: common.cuh  conv.cuh  generate.cuh  reference_cpu.cuh  reference_gpu.cuh
src/lab3/src/: conv.cu  conv_original.cu  main.cu  my_answer.cu
src/lab4/: CMakeLists.txt  README.md  bicgstab.prot  bicgstab.stf  bicgstab.stf.cop.anc  bicgstab.stf.dcl  bicgstab.stf.f.0  bicgstab.stf.f.1  bicgstab.stf.sts  compile.sh  data  itac_run.sh  run.sh  run_fixed.sh  run_hybrid_mpi.sh  run_mpi.sh  run_mpi_hello.sh  run_optimized.sh  run_vtune_mpi.sh
src/lab4/src/: main.cpp  mpi_hello.c
src/lab4/src/bicgstab/: solver.c
src/lab5/: README.md  REAL_MEMORY_ANALYSIS.md  calc_memory.sh  calculate_memory.py  main.py  measure_memory_final.py  run.sh  simple_test.py  test.sh
src/lab5/modules/: __init__.py  attention.py  config.py  layer.py  mlp.py  model.py  rope.py
src/lab5/utils/: utils.py
src/lab5/烦人的杂物/: FINAL_ANALYSIS_REPORT.md  IMPLEMENTATION_REPORT.md  THEORETICAL_ANALYSIS.md  calculate_model_size.py  calculate_params.py  calculate_theory.py  check_env.py  final_check.py  final_gpu_proof.py  measure_memory.py  mini_sanity_test.py  qwen3_analysis_47450.err  qwen3_analysis_47454.err  qwen3_analysis_47458.err  run_analysis.sh  run_check.sh  run_final_check.sh
src/project/winograd/CPU/: Makefile  README.md  main.c  naive_conv.c  winograd.h  winograd_conv.c
src/project/winograd/CPU/inputs/: test.txt
src/project/winograd/GPU/: Makefile  README.md  main.cu  naive_conv.cu  winograd.cuh  winograd_conv.cu
src/project/winograd/GPU/inputs/: config.txt
